2010-09-14	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/sbin/pfsetvlan: Fixed merge problem introduced yesterday where
	pre-trunk code has been propagated in trunk by mistake breaking the
	build.

2010-09-13	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/vlan/custom.pm: Importing more modules to avoid people using
	custom code that doesn't compile even if they copiedy and pasted from
	pf::vlan. Fixes #1001 for pf::vlan::custom since there are no specific 
	constants defined in pf::vlan.
	http://www.packetfence.org/bugs/view.php?id=1001

	* pf/lib/pf/node.pm: Sub node_register_auto no longer exported since 
	a while. Removing at the earliest point in trunk branch revno:
	bad6d50ec65bad5779a30d488020eb49acad200d

	* pf/packetfence.spec: Package version bump to 1.10.0 to clearly mark
	a departure from 1.9.x

	* pf/addons/802.1X/rlm_perl_packetfence_soap.pl: Added SSID detection 
	for Aruba wireless controllers.

	* pf/conf/dhcp_fingerprints.conf: New DHCP fingerprints: Windows,
	Alcatel, Siemens, Cisco, Linksys, Mitel IP phones, Cisco, Enterasys,
	Trapeze APs, Debian, Ubuntu, Puppy Linux, Enterasys Switches, Nokia
	Internet Tablet, HP iLO Agents, APC UPS, Polycom Video conferencing,
	FreeBSD, Eye-Fi Wireless Memory Card, Novell Netware, Apple Netboot,
	more PXE, Solaris 8 (SunOS 5.8) and Neoware's thin clients.
	Thanks to Eric Kollmann for the contribution! See his OS/device 
	fingerprinting related work at: http://myweb.cableone.net/xnih/

2010-09-10	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/sbin/pfsetvlan: Added logging to highlight the fact that we are
	connecting on a node's previous switch. Will prevent confusing people 
	like me. Fixes #1052;
	http://www.packetfence.org/bugs/view.php?id=1052
	Also made some unnecessary whitespace adjustments.. sorry I couldn't 
	resist...

	* pf/bin/pfcmd: Fixes to the try {} catch {} syntax. No bug reported 
	but I found out it could be problematic since I was bitten by this 