@@ -22,6 +22,7 @@ use diagnostics;
 use Log::Log4perl;
 
 use base ('pf::radius');
+use pf::config;
 
 =head1 AUTHOR
 
@@ -29,7 +30,7 @@ Olivier Bilodeau <obilodeau@inverse.ca>
 
 =head1 COPYRIGHT
 
-Copyright (C) 2009 Inverse inc.
+Copyright (C) 2009,2010 Inverse inc.
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
